<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <string name="near_the">Near the</string>
    <string name="no_earthquakes_found">No earthquakes found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>
    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>
    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>
    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude Descending</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <!-- Label for order-by ascending magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_ascending_magnitude_label">Magnitude Ascending</string>
    <string name="settings_order_by_ascending_magnitude_value" translatable="false">magnitude-asc</string>
    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <!-- Label for order-by most past option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_past_label">Most Past</string>
    <string name="settings_order_by_most_past_value" translatable="false">time-asc</string>
    <!-- Strings For Limit Preference [CHAR LIMIT=30] -->
    <string name="settings_limit_label">Limit</string>
    <string name="settings_limit_key" translatable="false">limit</string>
    <string name="settings_limit_default" translatable="false">10</string>
    <!-- Strings For Start Date Preference [CHAR LIMIT=30] -->
    <string name="settings_start_date_label">Start Date</string>
    <string name="settings_start_date_key" translatable="false">start_date</string>
    <string name="settings_start_date_default" translatable="false">2018-1-1</string>
</resources>
