<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!--The key in android:key is used to store the Preference value in SharedPreferences.-->

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_start_date_default"
        android:inputType="date"
        android:key="@string/settings_start_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_start_date_label" />

</PreferenceScreen>